--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "test": "jest"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
@@ -55,17 +54,10 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.27.1",
-    "babel-loader": "^9.1.3",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.8.0",
-    "jest": "^30.0.0",
-    "jest-environment-jsdom": "^30.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
