--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
